# sequence

./: ChangeLog  sequence.cabal
.github/workflows/: ci.yml
Data/: SequenceClass.hs
Data/Sequence/: Any.hs  BSeq.hs  FastCatQueue.hs  FastQueue.hs  Queue.hs  ToCatQueue.hs
Data/Sequence/BSeq/: Internal.hs
Data/Sequence/FastQueue/: Internal.hs
Data/Sequence/FastQueue/Internal/: Any.hs
Data/Sequence/Queue/: Internal.hs
Data/Sequence/ToCatQueue/: Internal.hs
fake-test/: Test.hs
test/: BSeq.hs  FastQueue.hs  Queue.hs  Test.hs  ToCatQueue.hs  Valid.hs
